.metadata/.plugins/org.eclipse.cdt.ui/display-module.build.log
14:39:19 **** Incremental Build of configuration Debug for project display-module ****
make -j12 all 
arm-none-eabi-gcc "C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../../i2c/inc -I../../lcd/inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"lcd/src/lcd.d" -MT"lcd/src/lcd.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "lcd/src/lcd.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../../i2c/inc -I../../lcd/inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:25:
../../lcd/inc/lcd.h:11:9: error: redeclaration of enumerator 'DISABLE'
   11 |         DISABLE = 0,
      |         ^~~~~~~
In file included from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h:29,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32f4xx_hal_conf.h:275,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:192:3: note: previous definition of 'DISABLE' with type 'enum <anonymous>'
  192 |   DISABLE = 0U,
      |   ^~~~~~~
../../lcd/inc/lcd.h:12:9: error: redeclaration of enumerator 'ENABLE'
   12 |         ENABLE = 1
      |         ^~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:193:3: note: previous definition of 'ENABLE' with type 'enum <anonymous>'
  193 |   ENABLE = !DISABLE
      |   ^~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:97:9: error: unknown type name 'lcd'; use 'struct' keyword to refer to the type
   97 |         lcd config;
      |         ^~~
      |         struct 
../Core/Src/main.c:98:15: error: request for member 'lcd_misc_gpio' in something not a structure or union
   98 |         config.lcd_misc_gpio = GPIOA;
      |               ^
../Core/Src/main.c:99:15: error: request for member 'select_pin' in something not a structure or union
   99 |         config.select_pin = GPIO_PIN_3;
      |               ^
../Core/Src/main.c:100:15: error: request for member 'rw_pin' in something not a structure or union
  100 |         config.rw_pin = GPIO_PIN_2;
      |               ^
../Core/Src/main.c:101:15: error: request for member 'enable_pin' in something not a structure or union
  101 |         config.enable_pin = GPIO_PIN_10;
      |               ^
../Core/Src/main.c:102:15: error: request for member 'lcd_data_gpio' in something not a structure or union
  102 |         config.lcd_data_gpio = GPIOB;
      |               ^
../Core/Src/main.c:103:15: error: request for member 'data_pin_1' in something not a structure or union
  103 |         config.data_pin_1 = GPIO_PIN_3;
      |               ^
../Core/Src/main.c:104:15: error: request for member 'data_pin_2' in something not a structure or union
  104 |         config.data_pin_2 = GPIO_PIN_5;
      |               ^
../Core/Src/main.c:105:15: error: request for member 'data_pin_3' in something not a structure or union
  105 |         config.data_pin_3 = GPIO_PIN_4;
      |               ^
../Core/Src/main.c:106:15: error: request for member 'data_pin_4' in something not a structure or union
  106 |         config.data_pin_4 = GPIO_PIN_10;
      |               ^
../Core/Src/main.c:107:15: error: request for member 'rw' in something not a structure or union
  107 |         config.rw = 0;
      |               ^
../Core/Src/main.c:108:15: error: request for member 'select' in something not a structure or union
  108 |         config.select = 0;
      |               ^
../Core/Src/main.c:109:15: error: request for member 'data' in something not a structure or union
  109 |         config.data = 0;
      |               ^
../Core/Src/main.c:110:15: error: request for member 'enable' in something not a structure or union
  110 |         config.enable = 0;
      |               ^
../Core/Src/main.c:97:13: warning: variable 'config' set but not used [-Wunused-but-set-variable]
   97 |         lcd config;
      |             ^~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c:8:
../../lcd/inc/lcd.h:11:9: error: redeclaration of enumerator 'DISABLE'
   11 |         DISABLE = 0,
      |         ^~~~~~~
In file included from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h:29,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32f4xx_hal_conf.h:275,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../../lcd/inc/lcd.h:5:
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:192:3: note: previous definition of 'DISABLE' with type 'enum <anonymous>'
  192 |   DISABLE = 0U,
      |   ^~~~~~~
../../lcd/inc/lcd.h:12:9: error: redeclaration of enumerator 'ENABLE'
   12 |         ENABLE = 1
      |         ^~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:193:3: note: previous definition of 'ENABLE' with type 'enum <anonymous>'
  193 |   ENABLE = !DISABLE
      |   ^~~~~~
C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c: In function 'string':
C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c:129:39: error: 'str1' undeclared (first use in this function)
  129 |         for (uint8_t i = 0; i < 16 && str1[i] != '\0'; ++i)
      |                                       ^~~~
C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c:129:39: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/north/Documents/code/cpp/grocr/lcd/src/lcd.c:132:39: error: 'str2' undeclared (first use in this function)
  132 |         for (uint8_t i = 0; i < 16 && str2[i] != '\0'; ++i)
      |                                       ^~~~
make: *** [lcd/src/subdir.mk:19: lcd/src/lcd.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:39:19 Build Failed. 23 errors, 1 warnings. (took 367ms)

